# embr-coap

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md  library.json
src/: .editorconfig  CMakeLists.txt  MemoryPool.cpp  MemoryPool.h  README.md  cbor.cpp  cbor.h  coap-blockwise.h  coap-decoder.cpp  coap-decoder.h  coap-dispatcher.cpp  coap-dispatcher.h  coap-dispatcher.hpp  coap-encoder.cpp  coap-encoder.h  coap-features.h  coap-generator.cpp  coap-generator.h  coap-header.h  coap-observable.h  coap-responder.cpp  coap-responder.h  coap-token.cpp  coap-token.h  coap-uint.h  coap-uripath-dispatcher.cpp  coap-uripath-dispatcher.h  coap-uripath-dispatcher.hpp  coap.cpp  coap.h  coap_daemon.cpp  coap_daemon.h  coap_subscription.cpp  coap_subscription.h  coap_transmission.cpp  coap_transmission.h  main.cpp  memory.cpp  memory.h  platform.h  (+3 more)
src/cbor/: cbor.cpp  decoder.cpp  decoder.h  encoder.h  features.h
src/coap/: blockwise.h  context.h  decoder-observer.h  decoder-subject.h  decoder-subject.hpp  decoder.cpp  decoder.h  decoder.hpp  encoder.h  encoder.hpp  experimental-observer.h  experimental-packet-manager.h  experimental.cpp  fwd.h  header.h  observable.cpp  observable.h  observable.hpp  option-decoder.cpp  option.h  platform.h  streambuf-decoder.h  streambuf-encoder.h  token.cpp  token.h  uint.h  version.h
src/coap/context/: README.md  concepts.h  features.h  from_query.h  sub.h  sub.hpp  tags.h
src/coap/decoder/: context.h  decode-and-notify.h  events.h  netbuf.h  observer-aggregate.h  observer-aggregate.hpp  observer.h  option.h  result.h  simple.h  streambuf.h  streambuf.hpp  subject-core.hpp  subject.h  subject.hpp  uri.h
src/coap/decoder/observer/: core.h  diagnostic.h  observable.h  uri.h  util.cpp  util.h
src/coap/encoder/: concepts.h  factory.h  option.h  streambuf.h
src/coap/internal/: buffer.h  constants.h  context.h  factory.h  header.h  root.h  verify.hpp
src/coap/internal/header/: README.md  c++03.h  c++11.h  code.h  enum.h  legacy.h
src/coap/internal/raw/: README.md  header.h
src/coap/internal/rfc7641/: enum.h  fwd.h  keys.h  notifier.h  notifier.hpp  registrar.h
src/coap/internal/rfc7959/: decode.h  encode.h  helper.h  state-machine.h
src/coap/platform/: api.h  api.hpp  fwd.h  ip.h
src/coap/platform/esp-idf/: api.h  api.hpp  observer.cpp  observer.h  rtc.h
src/embr/: dataport.h  dataport.hpp  datapump.h  datapump.hpp  events.h
src/exp/: dataport.h  dataport.hpp  datapump-observer.h  datapump.h  datapump.hpp  diagnostic-decoder-observer.h  events.h  factory.h  get_header.h  message-observer.h  misc.h  option-trait.h  retry.h  subject.h  uripath-repeater.h  uripathmap.h
src/exp/lwip/: subject.h  subject.hpp
src/exp/prototype/: observer-idea1.h
src/exp/retry/: README.md  factory.h  manager.h  manager.hpp  metadata.h  provider.h  scheduler.h  tracker.h  tracker.hpp
src/json/: encoder.h  encoder.hpp
src/json/v1/: README.md  decoder.h  encoder.h  encoder.hpp  fluent.h
src/mc/: array-helper.h  encoder-base.h  experimental-factory.h  experimental.cpp  experimental.h  linkedlist.cpp  linkedlist.h  memory-chunk.h  memory-pool.h  memory.h  memory_index.h  memory_index2.h  memory_pool.h  opts-internal.h  opts.h  pipeline-decoder.h  pipeline-encoder.h  pipeline-reader.h  pipeline-writer.h  pipeline.cpp  pipeline.h
src/obsolete/: README.md  coap-dispatcher.cpp  coap-dispatcher.h  coap-observable.h  coap-uripath-dispatcher.h  coap.h  coap_transmission.cpp  coap_transmission.h
src/obsolete/cbor/: encoder.h
src/obsolete/coap/: context.h  encoder.h  experimental-observer.h  observable.h  observable.hpp
src/obsolete/exp/: misc.h  misc.hpp
src/obsolete/mc/: experimental-factory.h  experimental.cpp  experimental.h
src/platform/: README.md  assert.h
src/platform/arduino/: arduino-eth-datapump.cpp  datapump.cpp  udp-datapump.h
src/platform/generic/: datapump-messageobserver.hpp  malloc_netbuf.h
src/platform/lwip/: lwip-datapump.cpp  lwip-datapump.h  lwip-portandaddress.h
src/platform/mbedtls/: dtls-datapump.cpp  dtls-datapump.h  dtls.h  dtls.hpp  esp8266-timing.cpp
src/platform/posix/: sockets-datapump.cpp  sockets-datapump.h
src/tests/: CMakeLists.txt  cbor-test.cpp  coap-decoder-test.cpp  coap-dispatcher-test.cpp  coap-encoder-test.cpp  coap-observable-test.cpp  coap-token-test.cpp  coap.cpp  coap_daemon.cpp  coap_lowlevel.cpp  coap_send.cpp  decoder-subject-test.cpp  experimental-test.cpp  experimental2-test.cpp  main_test.cpp  memory_pool.cpp  memory_test.cpp  pipeline_test.cpp  string_test.cpp  test-data.h  test-observer.h
src/unused/: coap-responder.h  coap.old.cpp  coap.old.h
test/c++03/: CMakeLists.txt  README.md  main.cpp
test/obsolete/simple_server/: CMakeLists.txt  ping.py  requirements.txt
test/posix/cbor/: CMakeLists.txt  main.cpp  simple-cbor-responder.hpp
test/posix/datapump/: CMakeLists.txt  main.cpp  simple-ping-responder.hpp
test/posix/discoverable/: CMakeLists.txt  main.cpp
test/posix/dispatch-simple-server/: CMakeLists.txt  coap.cpp  experimental.h  main.cpp  main.h
test/posix/observable/: CMakeLists.txt  observable.cpp
test/simple_server/: CMakeLists.txt  main.cpp  ping.py
test/unit-tests/: CMakeLists.txt  blockwise-test.cpp  cbor-test.cpp  coap-core.cpp  coap-datapump-test.cpp  coap-decoder-test.cpp  coap-dispatcher-test.cpp  coap-encoder-test.cpp  coap-header-test.cpp  coap-observable-test.cpp  coap-token-test.cpp  coap.cpp  coap_daemon.cpp  coap_lowlevel.cpp  coap_send.cpp  context-test.cpp  dataport-test.cpp  decoder-subject-test.cpp  experimental-test.cpp  experimental2-test.cpp  json-test.cpp  main_test.cpp  netbuf-test.cpp  pipeline_test.cpp  retry-test.cpp  test-context.h  test-data.h  test-observer.h  test-uri-data.h  uint-test.cpp
test/unit-tests/mc/: opts.h
test/unit-tests/obsolete/: README.md  coap-dispatcher-test.cpp  coap.cpp  retry-test.cpp  test-observer.h
test/unit-tests/unused/: coap_send.cpp
test/unity/: CMakeLists.txt  basic.cpp  context.cpp  decoder.cpp  encoder.cpp  experimental.cpp  lwip.cpp  retry.cpp  rfc7641.cpp  unit-test.h  uri.cpp
(+301 files in other folders)
